--- a/assignment 1/merchandise.html
+++ b/assignment 1/merchandise.html
@@ -41,3 +41,12 @@
 <h1>
     <span style="font-family: 'Roboto Condensed', sans-serif;"></a>MERCHANDISE</span>
 </h1>
+<footer>
+    <span style="font-family: 'Roboto Condensed', sans-serif;">
+        <ul class = " header_list">
+            <li><a href="https://www.instagram.com/saythename_17" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com/pledis_17" target="_blank">Twitter</a></li>
+            <li><a href="https://www.youtube.com/user/pledis17" >YouTube</a></li>
+    </span>
+    <span style="font-family: 'Roboto Condensed', sans-serif;">&copy; 2023 PLEDIS ENTERTAINMENT. All rights reserved.</span>
+</footer>
