--- a/assignment 1/members.html
+++ b/assignment 1/members.html
@@ -25,6 +25,39 @@
         text-align: center;
         font-size: 45px;
     }
+    .flex-row {
+    display: flex;
+    justify-content: space-around; /* Align items to the left in each row */
+    margin-bottom: 0; /* Remove margin between rows */
+    padding-right: 0%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+
+}
+
+    .flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; /* Allow items to wrap to the next line */
+}
+    
+    .flex-item {
+    padding: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    box-sizing: border-box;
+    padding-right: 0;
+}
+
+    .flex-item img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border: 1px solid #ccc;
+    justify-content: flex-start;
+    padding-right: 0;
+}
 </style>
 <header>
     <span style="font-family: 'Roboto Condensed', sans-serif;"><a href="index.html">SEVENTEEN</a></span>
@@ -41,3 +74,56 @@
 <h1>
     <span style="font-family: 'Roboto Condensed', sans-serif;"></a>MEMBERS</span>
 </h1>
+<body>
+    <div class="flex-container">
+        <div class="flex-item">
+            <img src="images/scoups.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/jeonghan.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/joshua.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/jun.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/hoshi.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/wonwoo.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/woozi.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/the8.jpg" style = "width: 150px ; height: 200px;"> 
+        </div>
+        <div class="flex-item">
+            <img src="images/mingyu.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/dk.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/seungkwan.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/vernon.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+        <div class="flex-item">
+            <img src="images/dino.jpg" style = "width: 150px ; height: 200px;">
+        </div>
+    </div>
+</body>
+<br>
+<footer>
+    <span style="font-family: 'Roboto Condensed', sans-serif;">
+        <ul class = " header_list">
+            <li><a href="https://www.instagram.com/saythename_17" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com/pledis_17" target="_blank">Twitter</a></li>
+            <li><a href="https://www.youtube.com/user/pledis17" >YouTube</a></li>
+    </span>
+    <span style="font-family: 'Roboto Condensed', sans-serif;">&copy; 2023 PLEDIS ENTERTAINMENT. All rights reserved.</span>
+</footer>
